# hinduce-missingh

./: hinduce-missingh.cabal
src/Data/List/: HIUtils.hs
src/Data/String/: HIUtils.hs
